deployment/multi-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: multi-server
  name: multi-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: multi-server
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: multi-server
    spec:
      containers:
      - image: stylerhun/multi-server
        name: multi-server
        ports:
        - containerPort: 5000
        resources: {}
status: {}
