deployment/multi-client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-client-svc
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: multi-client
  type: ClusterIP
status:
  loadBalancer: {}
