deployment/multi-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: multi-server-svc
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: multi-server
  type: ClusterIP
status:
  loadBalancer: {}
